--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "tron"
   ],
   "author": "SafeBlock",
-  "license": "MIT",
+  "license": "CC BY-NC-SA 4.0",
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
@@ -27,15 +27,15 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kurai-foundation/express-router.git"
+    "url": "git+https://github.com/safeblock-dev/wallet-connector-solid.git"
   },
   "publishConfig": {
     "access": "public"
   },
   "bugs": {
-    "url": "https://github.com/kurai-foundation/express-router/issues"
+    "url": "https://github.com/safeblock-dev/wallet-connector-solid/issues"
   },
-  "homepage": "https://github.com/kurai-foundation/express-router#readme",
+  "homepage": "https://github.com/safeblock-dev/wallet-connector-solid#readme",
   "dependencies": {
     "@tonconnect/ui": "^2.0.9",
     "@walletconnect/ethereum-provider": "^2.17.0",
