--- a/package.json
+++ b/package.json
@@ -37,10 +37,8 @@
   },
   "homepage": "https://github.com/safeblock-dev/wallet-connector-solid#readme",
   "dependencies": {
-    "@tonconnect/ui": "^2.0.9",
     "@walletconnect/ethereum-provider": "^2.17.0",
     "@walletconnect/modal": "^2.7.0",
-    "ethers": "^6.13.4",
-    "tronweb": "^6.0.0"
+    "ethers": "^6.13.4"
   }
 }
